new property on meta added (minimum-scale=1) to solve a problem with media queries

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -28,19 +28,34 @@
 	&__item {
 		text-decoration: none;
 		color: white;
-		font-size: 1.1rem;
-		font-weight: 500;
-		transition: padding 0.5s;
-		padding: 16px;
+		font-size: 1.35rem;
+		font-weight: 400;
+		padding: 0 16px;
 
 		&:hover {
-			// background-color: $menu-item-color-hoover;
-			font-weight: 700;
+			text-decoration: underline;
 		}
 
 		&--active {
-			// background-color: $menu-item-color-hoover;
 			font-weight: 700;
 		}
+	}
+}
+
+@media (max-width: 1024px) {
+	.header {
+		background-color: orange;
+	}
+}
+
+@media (max-width: 768px) {
+	.header {
+		background-color: yellow;
+	}
+}
+
+@media (max-width: 480px) {
+	.header {
+		background-color: green;
 	}
 }
