Flip glitch Guada Version

--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
@@ -1,9 +1,15 @@
-<div class="container">
-	<div class="fliptest" style="padding: 10px;">
-		FLIPTEST
-		<div class="card">
-			<div class="card card__front">Front</div>
-			<div class="card card__back">Back</div>
+<div class="card-container">
+	<div class="card">
+		<div class="card-inner">
+			<div class="card-front">
+				<img class="card-image" src="../../assets/img/person-icon.png" />
+				<h1>Juan Pablo Amador Díaz</h1>
+			</div>
+			<div class="card-back">
+				<br /><br />
+				<h1>Juan Pablo Amador Díaz</h1>
+				<p>Software Developer</p>
+			</div>
 		</div>
 	</div>
 </div>
