--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -1,30 +1,44 @@
-// Container determines card size
-.container {
-	position: relative;
-	height: 100%;
+.card-container {
+	display: flex;
+	justify-content: center;
+	flex-grow: 1;
+	margin: 1em;
 }
 
 .card {
+	//background-color: transparent;
+	width: calc(100%);
+	height: calc(100%);
+}
+
+.card-inner {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	transition: transform 0.8s;
+	transform-style: preserve-3d;
+}
+.card:hover .card-inner {
+	transform: rotateY(180deg);
+}
+.card-front,
+.card-back {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	transform-style: preserve-3d;
-	transition: all 0.5s ease;
-
-	&__front {
-		backface-visibility: hidden;
-		background-color: yellowgreen;
-	}
-
-	&__back {
-		backface-visibility: hidden;
-		transform: rotateY(180deg);
-		background-color: blue;
-	}
+	backface-visibility: hidden;
 }
-
-.fliptest:hover {
-	.card {
-		transform: rotateY(180deg);
-	}
+.card-front {
+	background-color: none;
+}
+.card-back {
+	background-color: rgba(85, 85, 85, 0.5);
+	color: white;
+	transform: rotateY(180deg);
+}
+.card-image {
+	width: 70%;
+	height: auto;
+	border-radius: 50%;
 }
