Modify BEM of landing page bottom

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -32,7 +32,10 @@
 				<div class="card__container">
 					<div class="card__inner">
 						<div class="card__front">
-							<img class="card__image" src="../../assets/img/person-icon.png" />
+							<img
+								class="card__image"
+								src="../../assets/img/icon-profile1.png"
+							/>
 							<h3 class="card__front--text">Jose Angel Cívico Martos</h3>
 						</div>
 						<div class="card__back">
@@ -48,7 +51,10 @@
 				<div class="card__container">
 					<div class="card__inner">
 						<div class="card__front">
-							<img class="card__image" src="../../assets/img/person-icon.png" />
+							<img
+								class="card__image"
+								src="../../assets/img/icon-profile2.jpg"
+							/>
 							<h3 class="card__front--text">Gabriel García Rodríguez</h3>
 						</div>
 						<div class="card__back">
@@ -64,7 +70,10 @@
 				<div class="card__container">
 					<div class="card__inner">
 						<div class="card__front">
-							<img class="card__image" src="../../assets/img/person-icon.png" />
+							<img
+								class="card__image"
+								src="../../assets/img/icon-profile3.jpg"
+							/>
 							<h3 class="card__front--text">Guadalupe García Plaza</h3>
 						</div>
 						<div class="card__back">
@@ -102,7 +111,10 @@
 				<div class="card__container">
 					<div class="card__inner">
 						<div class="card__front">
-							<img class="card__image" src="../../assets/img/person-icon.png" />
+							<img
+								class="card__image"
+								src="../../assets/img/icon-profile3.jpg"
+							/>
 							<h3 class="card__front--text">Juan Pablo Amador Díaz</h3>
 						</div>
 						<div class="card__back">
