Flip Guada Version

--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -7,8 +7,8 @@
 
 .card {
 	//background-color: transparent;
-	width: calc(100%);
-	height: calc(100%);
+	width: 100px;
+	height: 300px;
 }
 
 .card-inner {
