hamburguer icon created

--- a/src/app/header/hamburguer-icon/hamburguer-icon.component.html
+++ b/src/app/header/hamburguer-icon/hamburguer-icon.component.html
@@ -1,1 +1,11 @@
-<p>St</p>
+<div class="hamburguer-box">
+	<div class="hamburguer-open">
+		<span class="hamburguer-open__bar"></span>
+		<span class="hamburguer-open__bar"></span>
+		<span class="hamburguer-open__bar"></span>
+	</div>
+	<div class="hamburguer-close">
+		<span class="hamburguer-close__bar hamburguer-close__bar--left"></span>
+		<span class="hamburguer-close__bar hamburguer-close__bar--right"></span>
+	</div>
+</div>
