--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,5 +20,6 @@
 		>
 		<a class="menu__item" href="#main-down">Info</a>
 		<a class="menu__item" href="#main-down">About us</a>
+		<app-hamburguer-icon></app-hamburguer-icon>
 	</nav>
 </header>
