--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -1,14 +1,18 @@
 .card-container {
+	width: 100%;
+	height: 100%;
 	display: flex;
 	justify-content: center;
-	flex-grow: 1;
-	margin: 1em;
+	//flex-grow: 1;
+	//margin: 1em;
 }
 
+//$containerWhidth : calc(card-container.width)
+
 .card {
-	//background-color: transparent;
-	width: 100px;
-	height: 300px;
+	background-color: transparent;
+	width: 100%;
+	height: 100%;
 }
 
 .card-inner {
