Fix several BEM names

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
-<section class="main">
-	<div class="main__wave">
+<section class="intro-section">
+	<div class="wave">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 			<path
 				fill="#273036"
@@ -9,13 +9,14 @@
 		</svg>
 	</div>
 
-	<div class="main-left">
-		<img class="main-left__image" src="../../assets/img/pokemon-prof.png" />
-		<img class="main-left__pokemon" [src]="imgSource" alt="" />
+	<div class="oak-professor">
+		<img class="oak-professor__image" src="../../assets/img/pokemon-prof.png" />
+		<img class="oak-professor__pokemon" [src]="imgSource" alt="" />
 	</div>
-	<div class="main-right">
-		<a class="main-right__button"
-			><span class="quote"></span> Find your Pokemon</a
+
+	<div class="btn-landing">
+		<a class="btn-landing__link"
+			><span class="quote"></span>Find your Pokemon</a
 		>
 	</div>
 </section>
