design of three break points made (1024-768-480px)

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,7 @@
 		>
 		<a class="menu__item" href="#main-down">Info</a>
 		<a class="menu__item" href="#main-down">About us</a>
-		<app-hamburguer-icon></app-hamburguer-icon>
 	</nav>
+
+	<app-hamburguer-icon class="hamburguer-icon"></app-hamburguer-icon>
 </header>
