--- a/src/app/header/hamburguer-icon/hamburguer-icon.component.html
+++ b/src/app/header/hamburguer-icon/hamburguer-icon.component.html
@@ -1,4 +1,4 @@
-<div class="hamburguer-box">
+<div id="icon" class="hamburguer-box">
 	<div class="icon hamburguer-open">
 		<span class="hamburguer-open__bar"></span>
 		<span class="hamburguer-open__bar"></span>
