--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,27 +5,27 @@
 		alt="Logo Pokeball"
 	/>
 	<img
-		class="pokemon-img"
+		class="pokemon-img pokemon-img--hidden-1"
 		src="../../assets/img/pikachu-footer.png"
 		alt="Pikachu"
 	/>
 	<img
-		class="pokemon-img"
+		class="pokemon-img pokemon-img--hidden-2"
 		src="../../assets/img/blastoise-footer.png"
 		alt="Blastoise"
 	/>
 	<img
-		class="title"
+		class="footer__title"
 		src="../../assets/img/pokedexApi-footer.png"
 		alt="Logo PokedexApi"
 	/>
 	<img
-		class="pokemon-img"
+		class="pokemon-img pokemon-img--hidden-2"
 		src="../../assets/img/ghost-footer.png"
 		alt="Ghost"
 	/>
 	<img
-		class="pokemon-img"
+		class="pokemon-img pokemon-img--hidden-1"
 		src="../../assets/img/charizard-footer.png"
 		alt="Charizard"
 	/>
