Our team (landing component) use now display flex. Code has been refactored

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -22,110 +22,67 @@
 </section>
 
 <section class="main-bottom">
-	<div class="header">
-		<p class="header__title">our team</p>
-	</div>
+	<h2 class="header">our team</h2>
 	<div class="info">
-		<div class="info__top">
-			<div class="card">
-				<div class="card__container">
-					<div class="card__inner">
-						<div class="card__front">
-							<img
-								class="card__image"
-								src="../../assets/img/icon-profile1.png"
-							/>
-							<h3 class="card__front--text">Jose Angel Cívico Martos</h3>
-						</div>
-						<div class="card__back">
-							<br /><br />
-							<br /><br />
-							<p class="card__back--text">Jose Angel Cívico Martos</p>
-							<p class="card__back--text">Software Developer</p>
-						</div>
-					</div>
+		<div class="card">
+			<div class="card__container">
+				<div class="card__front">
+					<img class="card__image" src="../../assets/img/icon-profile1.png" />
+					<h3 class="card__front--text">Jose Angel Cívico Martos</h3>
 				</div>
-			</div>
-			<div class="card">
-				<div class="card__container">
-					<div class="card__inner">
-						<div class="card__front">
-							<img
-								class="card__image"
-								src="../../assets/img/icon-profile2.jpg"
-							/>
-							<h3 class="card__front--text">Gabriel García Rodríguez</h3>
-						</div>
-						<div class="card__back">
-							<br /><br />
-							<br /><br />
-							<p class="card__back--text">Gabriel García Rodríguez</p>
-							<p class="card__back--text">Software Developer</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card__container">
-					<div class="card__inner">
-						<div class="card__front">
-							<img
-								class="card__image"
-								src="../../assets/img/icon-profile3.jpg"
-							/>
-							<h3 class="card__front--text">Guadalupe García Plaza</h3>
-						</div>
-						<div class="card__back">
-							<br /><br />
-							<br /><br />
-							<p class="card__back--text">Guadalupe García Plaza</p>
-							<p class="card__back--text">Software Developer</p>
-						</div>
-					</div>
+				<div class="card__back">
+					<p class="card__back--text">Jose Angel Cívico Martos</p>
+					<p class="card__back--text">Software Developer</p>
 				</div>
 			</div>
 		</div>
-		<div class="info__bottom">
-			<div class="card"></div>
-			<div class="card">
-				<div class="card__container">
-					<div class="card__inner">
-						<div class="card__front">
-							<img
-								class="card__image"
-								src="../../assets/img/guybrush_small.jpg"
-							/>
-							<h3 class="card__front--text">Jose Luis Aguilar Gómez</h3>
-						</div>
-						<div class="card__back">
-							<br /><br />
-							<br /><br />
-							<p class="card__back--text">Jose Luis Aguilar Gómez</p>
-							<p class="card__back--text">Software Developer</p>
-						</div>
-					</div>
+		<div class="card">
+			<div class="card__container">
+				<div class="card__front">
+					<img class="card__image" src="../../assets/img/icon-profile2.jpg" />
+					<h3 class="card__front--text">Gabriel García Rodríguez</h3>
+				</div>
+				<div class="card__back">
+					<p class="card__back--text">Gabriel García Rodríguez</p>
+					<p class="card__back--text">Software Developer</p>
 				</div>
 			</div>
-			<div class="card">
-				<div class="card__container">
-					<div class="card__inner">
-						<div class="card__front">
-							<img
-								class="card__image"
-								src="../../assets/img/icon-profile3.jpg"
-							/>
-							<h3 class="card__front--text">Juan Pablo Amador Díaz</h3>
-						</div>
-						<div class="card__back">
-							<br /><br />
-							<br /><br />
-							<p class="card__back--text">Juan Pablo Amador Díaz</p>
-							<p class="card__back--text">Software Developer</p>
-						</div>
-					</div>
+		</div>
+		<div class="card">
+			<div class="card__container">
+				<div class="card__front">
+					<img class="card__image" src="../../assets/img/icon-profile3.jpg" />
+					<h3 class="card__front--text">Guadalupe García Plaza</h3>
+				</div>
+				<div class="card__back">
+					<p class="card__back--text">Guadalupe García Plaza</p>
+					<p class="card__back--text">Software Developer</p>
 				</div>
 			</div>
-			<div class="card"></div>
+		</div>
+		<div class="card">
+			<div class="card__container">
+				<div class="card__front">
+					<img class="card__image" src="../../assets/img/guybrush_small.jpg" />
+					<h3 class="card__front--text">Jose Luis Aguilar Gómez</h3>
+				</div>
+				<div class="card__back">
+					<p class="card__back--text">Jose Luis Aguilar Gómez</p>
+					<p class="card__back--text">Software Developer</p>
+				</div>
+			</div>
+		</div>
+		<div class="card">
+			<div class="card__container">
+				<div class="card__front">
+					<img class="card__image" src="../../assets/img/icon-profile3.jpg" />
+					<h3 class="card__front--text">Juan Pablo Amador Díaz</h3>
+				</div>
+				<div class="card__back">
+					<p class="card__back--text">Juan Pablo Amador Díaz</p>
+					<p class="card__back--text">Software Developer</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
