--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -160,59 +160,38 @@
 .main-bottom {
 	display: flex;
 	flex-direction: column;
-	width: 100%;
-	height: calc(100vh - 70px);
+	// height: calc(100vh - 50px);
 	background-color: $primary-color;
 	overflow: hidden;
+	padding: 1em 0;
 }
 .header {
-	width: auto;
-	height: 12%;
 	text-align: center;
-	background-color: $primary-color;
-	&__title {
-		width: 100%;
-		height: 23%;
-		font-size: 40px;
-		text-align: center;
-		text-transform: uppercase;
-		color: white;
-		margin-top: 1em;
-	}
+	color: white;
+	font-size: 40px;
+	text-transform: uppercase;
+	margin-bottom: 1em;
 }
 .info {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: space-between;
-	width: 100%;
+	justify-content: center;
+	margin: 0 auto;
+	max-width: 1000px;
 	height: auto;
 	background-color: $primary-color;
-	&__top {
-		display: flex;
-		flex-wrap: wrap;
-		width: 100%;
-		margin: 1em 0em;
-	}
-	&__bottom {
-		display: flex;
-		flex-wrap: wrap;
-		width: 100%;
-		height: auto;
-		margin: 1em 0em;
-		background-color: $primary-color;
-	}
+	align-items: center;
 }
 
 .card {
 	display: flex;
 	justify-content: center;
-	flex-grow: 1;
+	align-items: center;
+	width: 300px;
+	height: 300px;
+	margin: 0 15px;
+
 	&__container {
-		background-color: transparent;
-		width: 350px;
-		height: 250px;
-	}
-	&__inner {
 		position: relative;
 		width: 100%;
 		height: 100%;
@@ -235,14 +214,18 @@
 			font-size: 24px;
 			text-align: center;
 			color: white;
+			margin-top: 10px;
 		}
 	}
 	&__back {
-		position: absolute;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
 		backface-visibility: hidden;
 		color: white;
-		width: 280px;
-		height: 280px;
+		margin: 0 15%;
+		height: 70%;
 		border-radius: 50%;
 		transform: rotateY(180deg);
 		background-color: rgba(85, 85, 85, 0.5);
@@ -252,10 +235,9 @@
 		background-size: 35%;
 		background-position: 0 100%;
 		&--text {
-			width: 100%;
-			height: 23%;
+			display: inline-block;
 			font-size: 22px;
-			text-align: center;
+			padding: 0.3em;
 		}
 	}
 	&__image {
