--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -1,48 +1,153 @@
+/* Flip Logic */
+
 .card-container {
-	width: 100%;
+	width: 100%; //Has to be in order to flip work correctly
 	height: 100%;
 	display: flex;
 	justify-content: center;
-	//flex-grow: 1;
-	//margin: 1em;
 }
-
-//$containerWhidth : calc(card-container.width)
 
 .card {
-	background-color: transparent;
 	width: 100%;
 	height: 100%;
+
+	&__inner {
+		position: relative;
+		text-align: center;
+		transition: transform 0.8s;
+		transform-style: preserve-3d;
+	}
+
+	&__front {
+		position: absolute;
+		backface-visibility: hidden;
+		background-color: none;
+	}
+
+	&__front--bg {
+		height: calc(100% - 4rem);
+		border-radius: 2rem;
+	}
+
+	&__front--data-bg {
+		height: calc(100% - 1rem);
+		border-radius: 2rem;
+		padding: 1rem 0 0 0;
+		background-color: #555555;
+	}
+
+	&__back {
+		position: absolute;
+		backface-visibility: hidden;
+		background-color: rgba(85, 85, 85, 0.5);
+		color: white;
+		transform: rotateY(180deg);
+	}
+
+	&__image {
+		margin-top: 1rem;
+		background-color: white;
+		width: 50%;
+		height: auto;
+		border-radius: 25%;
+	}
 }
 
-.card-inner {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	transition: transform 0.8s;
-	transform-style: preserve-3d;
-}
-.card:hover .card-inner {
+.card:hover .card__inner {
 	transform: rotateY(180deg);
 }
-.card-front,
-.card-back {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	backface-visibility: hidden;
+
+/* END Fliplogic */
+
+// Text General
+.title {
+	font-size: 3em; //Pending general styles
+	font-weight: bold; //Pending general styles
 }
-.card-front {
-	background-color: none;
-}
-.card-back {
-	background-color: rgba(85, 85, 85, 0.5);
+
+.subtitle {
 	color: white;
-	transform: rotateY(180deg);
+	font-weight: bolder;
+	margin: 1rem 0 0.5rem 0;
+	font-size: 2em;
 }
-.card-image {
-	width: 70%;
-	height: auto;
-	border-radius: 50%;
+
+.cap {
+	text-transform: capitalize;
+}
+
+// Title Btn
+
+.btn {
+	display: flex;
+	margin: 1rem 0;
+	align-items: center;
+	background-color: #ececec;
+	font-weight: bolder;
+	font-size: 1.5rem;
+	padding: 0.5rem;
+	border-radius: 1rem;
+
+	&--first {
+		margin: 0 1rem 1rem 1rem;
+	}
+}
+
+// Pokemon Types
+.type {
+	display: inline-block;
+	background-color: rgba(255, 255, 255, 0.363);
+	padding: 0.8rem;
+	margin: 0.2rem;
+	border-radius: 0.3em;
+	color: white;
+
+	&--pysychic {
+		background-color: #dd3267;
+	}
+	&--normal {
+		background-color: #aea695;
+	}
+	&--poison {
+		background-color: #712873;
+	}
+	&--fire {
+		background-color: #c72100;
+	}
+	&--bug {
+		background-color: #88960e;
+	}
+	&--dark {
+		background-color: #3c2d23;
+	}
+	&--dragon {
+		background-color: #5440ac;
+	}
+	&--electric {
+		background-color: #e79302;
+	}
+	&--fairy {
+		background-color: #e08ee0;
+	}
+	&--ghost {
+		background-color: #454593;
+	}
+	&--grass {
+		background-color: #3d9d07;
+	}
+	&--ground {
+		background-color: #ad8c33;
+	}
+	&--ice {
+		background-color: #c9d9dd;
+	}
+	&--rock {
+		background-color: #9e863d;
+	}
+	&--steel {
+		background-color: #8e8e9f;
+	}
+	&--water {
+		background-color: #0c67c2;
+	}
 }
