--- a/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.html
@@ -7,4 +7,4 @@
 	</h2>
 </div>
 <div id="map" class="map"></div>
-<button (click)="changePokemon()">Cambia pokemon</button>
+<!-- <button (click)="changePokemon()">Cambia pokemon</button> -->
