--- a/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.scss
@@ -12,11 +12,11 @@
 	align-items: center;
 	background-color: #ececec;
 	font-weight: bolder;
-	font-size: 2rem;
-	padding: 1rem;
+	font-size: 1.5rem;
+	padding: 0.5rem;
 	border-radius: 1rem;
 
 	&--first {
-		margin: 0 0 1rem 0;
+		margin: 0 1rem 1rem 1rem;
 	}
 }
