--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -7,14 +7,75 @@
 	height: calc(100vh - 70px);
 	background: url('../../assets/img/pokemon-header.jpg') no-repeat center;
 	background-size: cover;
+	&__wave {
+		position: absolute;
+		bottom: -3px;
+		width: 100%;
+		height: auto;
+		animation: scaleY-animation 1s;
+	}
+	.titles {
+		letter-spacing: 0.055em;
+		width: 30vw;
+		padding: 25px 40px;
+		margin-left: 100px;
+		h1 {
+			display: inline-block;
+			width: 100%;
+			font-size: 55px;
+			font-weight: bold;
+		}
+		&__title {
+			&--black {
+				color: $secondary-color;
+				text-align: left;
+				opacity: 0;
+				animation: opacity-animation 1s 2s forwards;
+			}
+			&--gray {
+				color: #868686;
+				text-align: center;
+				opacity: 0;
+				animation: opacity-animation 1s 2.5s forwards;
+			}
+			&--red {
+				color: $primary-color;
+				text-align: right;
+				opacity: 0;
+				animation: opacity-animation 1s 3s forwards;
+			}
+		}
+	}
 }
 
-.wave {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: auto;
+@keyframes scaleY-animation {
+	from {
+		transform: scaleY(0);
+	}
+	to {
+		transform: scaleY(1);
+	}
 }
+
+@keyframes opacity-animation {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+.functionality-section {
+	position: relative;
+	box-sizing: border-box;
+	width: 100%;
+	&__wave {
+		position: absolute;
+		top: 0;
+	}
+}
+
 .oak-professor {
 	position: absolute;
 	width: 100%;
@@ -28,6 +89,8 @@
 		max-width: 170px;
 		height: auto;
 		transition: 0.7s;
+		opacity: 0;
+		animation: opacity-animation 1s 1s forwards;
 	}
 	&__pokemon {
 		display: inline-block;
@@ -37,7 +100,19 @@
 		max-width: 160px;
 		transition: 0.7s;
 		width: 280px;
+		opacity: 0;
+		animation: pokemon-animation 1s forwards;
 	}
+	@keyframes pokemon-animation {
+		from {
+			left: -200px;
+		}
+		to {
+			left: 100px;
+			opacity: 1;
+		}
+	}
+
 	&__bubble {
 		display: inline-block;
 		position: absolute;
@@ -60,6 +135,17 @@
 	bottom: 80px;
 	right: 55px;
 	transition: 0.7s;
+	opacity: 0;
+	animation: btn-animation 1s forwards;
+	@keyframes btn-animation {
+		from {
+			right: 0;
+		}
+		to {
+			right: 55px;
+			opacity: 1;
+		}
+	}
 	&__link {
 		cursor: pointer;
 		display: inline-block;
@@ -132,22 +218,6 @@
 			}
 		}
 	}
-	// &__button{
-	//     background: $primary-color;
-	//     width: 180px;
-	//     height: 180px;
-	//     border-radius: 40%;
-	//     opacity: 0.8;
-	//     animation: drift 3000ms infinite linear;
-	// }
-	// &__link {
-	//     color: white;
-	//     display: block;
-	//     margin: 0 auto;
-	//     text-align: center;
-	//     font-size: 18px;
-	//     font-weight: bold;
-	// }
 }
 
 @keyframes drift {
@@ -186,12 +256,14 @@
 	justify-content: center;
 	flex-grow: 1;
 }
+
 .main-down-info-first {
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
 	margin: 2em 0em;
 }
+
 .main-down-info-second {
 	display: flex;
 	flex-wrap: wrap;
@@ -200,11 +272,13 @@
 	margin: 2em 0em;
 	background-color: $primary-color;
 }
+
 .card {
 	background-color: transparent;
 	width: 350px;
 	height: 250px;
 }
+
 .card-inner {
 	position: relative;
 	width: 100%;
@@ -225,6 +299,13 @@
 }
 .card-front {
 	background-color: none;
+	h1 {
+		width: 100%;
+		height: 23%;
+		font-size: 24px;
+		text-align: center;
+		color: white;
+	}
 }
 .card-back {
 	background-color: rgba(85, 85, 85, 0.5);
@@ -243,13 +324,7 @@
 	height: auto;
 	border-radius: 50%;
 }
-h1 {
-	width: 100%;
-	height: 23%;
-	font-size: 24px;
-	text-align: center;
-	color: white;
-}
+
 p {
 	width: 100%;
 	height: 23%;
@@ -268,7 +343,7 @@ p {
 }
 
 @media (max-width: 1024px) {
-	.main-left {
+	.oak-professor {
 		&__image {
 			width: 100%;
 			bottom: 50px;
@@ -279,11 +354,11 @@ p {
 			max-width: 140px;
 		}
 	}
-	.main-right {
+	.btn-landing {
 		position: absolute;
 		bottom: 50px;
 		right: 60px;
-		&__button {
+		&__link {
 			font-size: 14px;
 		}
 	}
