Completed card-front in detail component, missing back component

--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
@@ -7,6 +7,7 @@
 					<!-- Card Title -->
 					<h2 class="btn btn--first">
 						<img
+							class="icon-img"
 							src="./../../../assets/img/iconPokeData.svg"
 							alt="Icon Pokemon Data"
 						/>DATA
