--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -20,10 +20,11 @@
 	padding: 0.5em;
 	background-color: rgba(0, 0, 0, 0.37);
 	border-radius: 2em;
+	justify-content: space-between;
 }
 
 .container {
-	width: 50%;
+	width: 49%;
 }
 
 .unSelectedPokemon {
