--- a/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.html
@@ -1,10 +1,20 @@
-<div class="container-btn">
-	<h2 class="btn btn--first">
-		<img
-			src="./../../../assets/img/iconPointerMap.svg"
-			alt="Icon pointer map"
-		/>LOCATION
-	</h2>
+<div class="card">
+	<div class="card card__inner">
+		<!-- CARD FRONT -->
+		<div class="card card__front">
+			<div class="card__front--data-bg">
+				<!-- Card Title -->
+				<h2 class="btn btn--first">
+					<img
+						class="icon-img"
+						src="./../../../../assets/img/iconPointerMap.svg"
+						alt="Icon Pointer Map"
+					/>LOCATION
+				</h2>
+				<!-- Background Color -->
+				<div id="map" class="map"></div>
+			</div>
+		</div>
+	</div>
 </div>
-<div id="map" class="map"></div>
 <!-- <button (click)="changePokemon()">Cambia pokemon</button> -->
