--- a/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.scss
@@ -6,6 +6,34 @@
 	color: red;
 }
 
+// Shadows boxing
+
+.card {
+	width: 100%;
+	height: 100%;
+
+	&__front--bg {
+		height: calc(100% - 4rem);
+		border-radius: 2rem;
+	}
+
+	&__front--data-bg {
+		height: calc(100% - 1rem);
+		border-radius: 2rem;
+		padding: 1rem 0 0 0;
+		background-color: #555555;
+	}
+}
+
+.map {
+	border-radius: 2rem;
+}
+
+.icon-img {
+	width: 32px;
+	height: 32px;
+}
+
 .btn {
 	display: flex;
 	margin: 1rem 0;
