--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 </div>
-<div class="container-box">
+<div class="container-box" *ngIf="pokemonSelected === undefined">
 	<img
 		src="../../../assets/img/pikachu-search.png"
 		alt="Unselected picture"
