--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
@@ -10,7 +10,7 @@
 							class="icon-img"
 							src="./../../../assets/img/iconPokeData.svg"
 							alt="Icon Pokemon Data"
-						/>DATA
+						/>POKEMON
 					</h2>
 					<!-- Background Color -->
 					<div
@@ -37,9 +37,44 @@
 
 			<!-- CARD BACK -->
 			<div class="card card__back">
-				<br /><br />
-				<h1>Juan Pablo Amador Díaz</h1>
-				<p>Software Developer</p>
+				<div class="card__front--data-bg">
+					<!-- Card Title -->
+					<h2 class="btn btn--first">
+						<img
+							class="icon-img"
+							src="./../../../assets/img/iconPokeData.svg"
+							alt="Icon Pokemon Data"
+						/>DATA
+					</h2>
+					<!-- Background Color -->
+					<div
+						class="card__front--bg"
+						[style.background-color]="colorBackground(pokemonSelected.type[0])"
+					>
+						<!-- Stats bars Div -->
+						<div class="card__stats">
+							<h1 class="title">#{{ pokemonSelected.name }}</h1>
+
+							<ul class="ability">
+								<!-- Ability has to be iterated-->
+								<li class="ability ability__item">
+									Ability:
+									<span
+										class="cap"
+										*ngFor="let ability of pokemonSelected.ability"
+										>{{ ability }}
+									</span>
+								</li>
+								<li class="ability ability__item">
+									Height: {{ pokemonSelected.height }}
+								</li>
+								<li class="ability ability__item">
+									Weight: {{ pokemonSelected.weight }}
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
