--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -70,9 +70,72 @@
 	position: relative;
 	box-sizing: border-box;
 	width: 100%;
+	.functionalities {
+		display: flex;
+		flex-flow: row wrap;
+		.explanation-card {
+			display: flex;
+			flex-flow: column nowrap;
+			flex: 3;
+			padding: 50px;
+			&--double {
+				padding: 50px;
+				flex: 4;
+			}
+			&__img {
+				border-radius: 15px;
+				display: block;
+				margin: 15px auto;
+			}
+		}
+		.bubble-text {
+			background-color: #c4c4c4;
+			border-radius: 15px;
+			padding: 25px;
+			color: #202020;
+			text-align: justify;
+		}
+	}
 	&__wave {
 		position: absolute;
 		top: 0;
+	}
+	.title {
+		color: white;
+		position: absolute;
+		top: 0;
+		margin-top: 3vh;
+		font-weight: bold;
+	}
+
+	.pokedex-title {
+		background-color: $primary-color;
+		border-radius: 15px;
+		display: flex;
+		text-transform: uppercase;
+		&__num {
+			background-color: $secondary-color;
+			width: 80px;
+			height: 100%;
+			padding: 12px 0px;
+			border-radius: 15px 0px 0px 15px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-size: 23px;
+			span {
+				color: white;
+				display: inline;
+			}
+		}
+		&__text {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			color: white;
+			font-size: 16px;
+			padding: 0px 25px;
+		}
 	}
 }
 
@@ -318,6 +381,13 @@
 	height: 300px;
 	border-radius: 50%;
 	transform: rotateY(180deg);
+	p {
+		width: 100%;
+		height: 23%;
+		font-size: 22px;
+		text-align: center;
+		color: white;
+	}
 }
 .card-image {
 	width: 70%;
@@ -325,13 +395,6 @@
 	border-radius: 50%;
 }
 
-p {
-	width: 100%;
-	height: 23%;
-	font-size: 22px;
-	text-align: center;
-	color: white;
-}
 .title {
 	width: 100%;
 	height: 23%;
