--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap');
 
 body {
-	background-color: #d4d4d4;
+	background-color: #e9e9e9;
 	font-family: 'Roboto Condensed', sans-serif; //Changed from Roboto to Roboto Condensed
 	font-size: 16px;
 	height: 100vh;
