--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
 		alt="pokemon-logo"
 	/>
 
-	<nav class="menu">
+	<nav class="menu open">
 		<a
 			class="menu__item"
 			routerLink="/pokedex"
@@ -20,7 +20,6 @@
 		>
 		<a class="menu__item" href="#main-down">Info</a>
 		<a class="menu__item" href="#main-down">About us</a>
+		<app-hamburguer-icon class="hamburguer-icon"></app-hamburguer-icon>
 	</nav>
-
-	<app-hamburguer-icon class="hamburguer-icon"></app-hamburguer-icon>
 </header>
