--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
 		alt="pokemon-logo"
 	/>
 
-	<nav class="menu open">
+	<nav [ngClass]="{ open: displayMenu === true }" class="menu">
 		<a
 			class="menu__item"
 			routerLink="/pokedex"
@@ -20,6 +20,11 @@
 		>
 		<a class="menu__item" href="#main-down">Info</a>
 		<a class="menu__item" href="#main-down">About us</a>
-		<app-hamburguer-icon class="hamburguer-icon"></app-hamburguer-icon>
 	</nav>
+
+	<app-hamburguer-icon
+		(click)="render()"
+		#hamburguerIcon
+		class="hamburguer-icon"
+	></app-hamburguer-icon>
 </header>
