Add rights text

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -99,7 +99,7 @@
 			fill="#273036"
 		/>
 	</svg>
-	<h2 class="main-bottom__title">our team</h2>
+	<h2 class="title">our team</h2>
 	<div class="info">
 		<div class="card">
 			<div class="card__container">
@@ -162,4 +162,8 @@
 			</div>
 		</div>
 	</div>
+	<p class="main-bottom__rights">
+		This is a not-for-profit project. None of the images used in this projects
+		below us. All rights are reserved to The Pokemon Company
+	</p>
 </section>
