--- a/src/app/header/hamburguer-icon/hamburguer-icon.component.scss
+++ b/src/app/header/hamburguer-icon/hamburguer-icon.component.scss
@@ -8,7 +8,7 @@
 }
 
 .hamburguer-open {
-	display: flex;
+	display: none;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
@@ -51,4 +51,8 @@
 			transform: rotate(45deg);
 		}
 	}
+}
+
+.render {
+	display: flex;
 }
