--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -47,26 +47,18 @@
 }
 
 @media (max-width: 1024px) {
-	.header {
-		background-color: orange;
-	}
 	.menu {
 		height: 100%;
 		width: 50%;
 
 		&__item {
 			font-size: 1.2rem;
-			font-weight: 400;
 			padding: 0 14px;
 		}
 	}
 }
 
 @media (max-width: 768px) {
-	.header {
-		background-color: yellow;
-	}
-
 	.menu {
 		width: 60%;
 
@@ -82,7 +74,6 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		background-color: green;
 		height: auto;
 		padding-right: 0%;
 	}
@@ -99,6 +90,7 @@
 		align-items: center;
 		text-align: center;
 		padding-right: 0%;
+		transition: all 0.5s linear;
 
 		&__item {
 			font-size: 1rem;
@@ -109,6 +101,9 @@
 
 	.hamburguer-icon {
 		display: flex;
+		position: absolute;
+		top: 20px;
+		right: 20px;
 	}
 
 	.open {
