--- a/src/app/pokedex/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.scss
@@ -13,7 +13,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	width: $box-sizes;
+	width: 100%;
 	background-color: $secondary-color;
 	border-radius: 20px;
 	padding: 5px 0 5px 5px;
@@ -43,7 +43,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: $box-sizes;
+	// width: $box-sizes;
 	background-color: #f0f0f0;
 	border-radius: 20px 20px 60px 20px;
 }
