--- a/src/reset.scss
+++ b/src/reset.scss
@@ -92,6 +92,10 @@ video {
 	vertical-align: baseline;
 }
 
+body {
+	overflow-x: hidden;
+}
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
