Fixed height of card-front, now relays on height

--- a/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -52,8 +52,8 @@
 	&__image {
 		margin-top: 1rem;
 		background-color: white;
-		width: 50%;
-		height: auto;
+		//width: 50%;
+		height: 50%;
 		border-radius: 25%;
 	}
 
