All components use the servive instead of Input() variables

--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,8 +1,5 @@
 <div class="component-box" *ngIf="pokemonLoaded; else loading">
-	<app-pokemon-list
-		class="pokemon-list"
-		[pokemonList]="pokemons"
-	></app-pokemon-list>
+	<app-pokemon-list class="pokemon-list"></app-pokemon-list>
 	<div class="pokemon-detail">
 		<router-outlet></router-outlet>
 	</div>
