--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -2,9 +2,7 @@
 	<div class="container__selected">
 		<div class="panel">
 			<div class="panel__info">
-				<app-pokemon-card
-					[pokemonSelected]="pokemonSelected"
-				></app-pokemon-card>
+				<app-pokemon-card></app-pokemon-card>
 			</div>
 			<div class="panel__info">
 				<app-pokemon-map></app-pokemon-map>
@@ -16,6 +14,6 @@
 	<img
 		src="../../../assets/img/pikachu-search.png"
 		alt="Unselected picture"
-		class="container__noSelected"
+		class="container__no-selected"
 	/>
 </div>
