Add responsiveness to title on functionality section

--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -106,6 +106,7 @@
 		top: 0;
 		margin-top: 3vh;
 		font-weight: bold;
+		transition: 0.7s;
 	}
 
 	.pokedex-title {
@@ -425,6 +426,11 @@
 			font-size: 14px;
 		}
 	}
+	.functionality-section {
+		.title {
+			font-size: 25px;
+		}
+	}
 }
 
 @media (max-width: 768px) {
@@ -432,11 +438,42 @@
 		position: absolute;
 		bottom: 50%;
 	}
+	.intro-section {
+		.titles {
+			padding: 0px;
+			padding-top: 20px;
+			margin: 0 auto;
+			width: 60vw;
+			line-height: 45px;
+			h1 {
+				font-size: 43px;
+			}
+			&__title {
+				&--black {
+					text-align: left;
+				}
+				&--gray {
+					text-align: left;
+				}
+				&--red {
+					text-align: left;
+				}
+			}
+		}
+	}
+	.functionality-section {
+		.title {
+			font-size: 23px;
+			margin-top: 1vh;
+		}
+	}
 }
 
 @media screen and (max-width: 480px) {
 	.oak-professor {
-		position: static;
+		position: absolute;
+		left: 0;
+		top: 50%;
 		&__image {
 			max-width: 99px;
 			height: auto;
@@ -445,8 +482,11 @@
 			margin: 0 auto;
 		}
 		&__pokemon {
-			max-width: 140px;
-			margin-left: 47px;
+			max-width: 100px;
+			height: auto;
+			position: absolute;
+			display: block;
+			margin: 0 auto;
 		}
 	}
 	.btn-landing {
@@ -475,27 +515,11 @@
 			}
 		}
 	}
-	.intro-section {
-		.titles {
-			padding: 0px;
-			padding-top: 20px;
-			margin: 0 auto;
-			width: 60vw;
-			line-height: 45px;
-			h1 {
-				font-size: 43px;
-			}
-			&__title {
-				&--black {
-					text-align: left;
-				}
-				&--gray {
-					text-align: left;
-				}
-				&--red {
-					text-align: left;
-				}
-			}
+
+	.functionality-section {
+		.title {
+			font-size: 18px;
+			margin-top: 0;
 		}
 	}
 }
