BEM implemented to pokedex component

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,7 +1,7 @@
 @import '../../commonStyles.scss';
 
 .footer {
-	box-sizing: border-box;
+	//box-sizing: border-box;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
