--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container" *ngIf="pokemonSelected">
-	<div class="container__selected">
+	<div class="container--selected">
 		<div class="panel">
 			<div class="panel__info">
 				<app-pokemon-card></app-pokemon-card>
@@ -14,6 +14,6 @@
 	<img
 		src="../../../assets/img/pikachu-search.png"
 		alt="Unselected picture"
-		class="container__no-selected"
+		class="container--no-selected"
 	/>
 </div>
