--- a/src/app/pokedex/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.html
@@ -1,11 +1,11 @@
-<main class="component-box">
-	<div class="title-box">
+<main class="container">
+	<div class="title">
 		<img
-			class="title-box__logo"
+			class="title__logo"
 			src="./assets/img/pokeball-logo.png"
 			alt="pokeball-logo"
 		/>
-		<h1 class="title-box__title">Pokedex</h1>
+		<h1 class="title__text">Pokedex</h1>
 	</div>
 
 	<div class="list-container">
