--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -3,14 +3,14 @@
 .container {
 	padding: 2rem;
 
-	&__selected {
+	&--selected {
 		height: 100%;
 		background-color: #db4545;
 		border-radius: 20px;
 		padding: 2rem;
 	}
 
-	&__no-selected {
+	&--no-selected {
 		width: 55%;
 	}
 }
