--- a/src/app/pokedex/pokemon-list/pokemon-list.component.scss
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.scss
@@ -1,15 +1,15 @@
 @import '../../../commonStyles.scss';
 
-.component-box {
+.container {
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
-	width: 100%;
-	height: 100%;
-	padding: 10px;
+	// justify-content: flex-start;
+	// width: 100%;
+	// height: 100%;
+	padding: 2rem;
 }
 
-.title-box {
+.title {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -26,7 +26,7 @@
 		margin: 5px;
 	}
 
-	&__title {
+	&__text {
 		font-size: 1.5rem;
 		font-family: 'Roboto Condensed';
 		color: white;
@@ -43,8 +43,8 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	// width: $box-sizes;
 	background-color: #f0f0f0;
+	height: 100%;
 	border-radius: 20px 20px 60px 20px;
 }
 
@@ -74,8 +74,8 @@
 }
 
 .list {
-	max-height: 56vh;
-	width: 80%;
+	max-height: 45vh;
+	// width: 80%;
 	overflow-y: scroll;
 	margin-bottom: 20px;
 
